--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "firebase": "^5.6.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "underscore": "^1.9.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -41,7 +42,7 @@
     "@storybook/angular": "^4.0.11",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "babel-loader": "^8.0.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
