--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.5.4",
     "firebase": "^5.6.0",
     "ngx-markdown": "^7.0.2",
+    "node-sass": "^4.11.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "underscore": "^1.9.1",
