--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "firebase": "^5.6.0",
     "ngx-markdown": "^7.0.2",
     "node-sass": "^4.11.0",
+    "prismjs": "^1.15.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "underscore": "^1.9.1",
