--- a/package.json
+++ b/package.json
@@ -21,26 +21,27 @@
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
-    "@angular/fire": "^5.1.1",
     "@angular/flex-layout": "^7.0.0-beta.19",
     "@angular/forms": "~7.1.0",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "core-js": "^2.5.4",
-    "firebase": "^5.6.0",
+    "ngx-ludan-modal": "^1.0.0",
     "ngx-markdown": "^7.0.2",
     "node-sass": "^4.11.0",
     "prismjs": "^1.15.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "typed.js": "^2.0.9",
     "underscore": "^1.9.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.11.0",
-    "@angular/cli": "~7.1.1",
+    "@angular/cli": "^7.3.0",
     "@angular/compiler-cli": "~7.1.0",
+    "@angular/fire": "^5.1.1",
     "@angular/language-service": "~7.1.0",
     "@babel/core": "^7.2.0",
     "@storybook/addon-knobs": "^4.0.11",
@@ -50,6 +51,7 @@
     "@types/jasminewd2": "~2.0.3",
     "babel-loader": "^8.0.4",
     "codelyzer": "~4.5.0",
+    "firebase": "^5.6.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
