--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "ng build",
     "build:prod": "ng build --prod",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint": "tslint --project tsconfig.json -c tslint.json 'src/**/*.ts'",
+    "lint:fix": "tslint --project tsconfig.json -c tslint.json 'src/**/*.ts' --fix",
     "e2e": "ng e2e",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
@@ -53,6 +54,7 @@
     "babel-loader": "^8.0.4",
     "codelyzer": "~4.5.0",
     "firebase": "^5.6.0",
+    "husky": "^1.3.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
@@ -65,5 +67,10 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run lint:fix && npm run lint"
+    }
   }
 }
