--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test": "ng test",
     "lint": "tslint --project tsconfig.json -c tslint.json 'src/**/*.ts'",
     "lint:fix": "tslint --project tsconfig.json -c tslint.json 'src/**/*.ts' --fix",
+    "sass-lint": "sass-lint '**/*.scss' -v -q",
+    "sass-lint:fix": "sass-lint-auto-fix",
     "e2e": "ng e2e",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
@@ -62,7 +64,10 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "npm-run-all": "^4.1.5",
     "protractor": "~5.4.0",
+    "sass-lint": "^1.12.1",
+    "sass-lint-auto-fix": "^0.16.2",
     "storybook-readme": "^4.0.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
@@ -70,7 +75,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run lint:fix && npm run lint"
+      "pre-push": "run-p lint:fix"
     }
   }
 }
