use different tslint config

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "ng build",
     "build:prod": "ng build --prod",
     "test": "ng test",
-    "lint": "tslint --project tsconfig.json -c tslint.json 'src/**/*.ts'",
-    "lint:fix": "tslint --project tsconfig.json -c tslint.json 'src/**/*.ts' --fix",
+    "lint": "tslint --project tsconfig.json -c src/tslint.json 'src/**/*.ts'",
+    "lint:fix": "tslint --project tsconfig.json -c src/tslint.json 'src/**/*.ts' --fix",
     "sass-lint": "sass-lint -c .sass-lint.yml -v -q",
     "sass-lint:fix": "sass-lint-auto-fix",
     "e2e": "ng e2e",
