--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,13 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss", "node_modules/prismjs/themes/prism-tomorrow.css"],
+            "styles": [
+              "src/styles.scss",
+              "node_modules/prismjs/themes/prism-tomorrow.css"
+            ],
+            "stylePreprocessorOptions": {
+              "includePaths": ["./src/app/shared/styles"]
+            },
             "scripts": [
               "node_modules/marked/lib/marked.js",
               "node_modules/prismjs/prism.js",
