--- a/package.json
+++ b/package.json
@@ -19,56 +19,56 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.1.0",
-    "@angular/cdk": "^7.3.5",
-    "@angular/common": "~7.1.0",
-    "@angular/compiler": "~7.1.0",
-    "@angular/core": "~7.1.0",
+    "@angular/animations": "^7.1.4",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^7.1.4",
+    "@angular/compiler": "^7.1.4",
+    "@angular/core": "^7.1.4",
     "@angular/flex-layout": "^7.0.0-beta.24",
-    "@angular/forms": "~7.1.0",
-    "@angular/platform-browser": "~7.1.0",
-    "@angular/platform-browser-dynamic": "~7.1.0",
-    "@angular/router": "~7.1.0",
-    "core-js": "^2.5.4",
-    "ngx-ludan-modal": "^1.0.1",
-    "ngx-ludan-sudoku": "0.0.2",
-    "ngx-markdown": "^7.0.2",
+    "@angular/forms": "^7.1.4",
+    "@angular/platform-browser": "^7.1.4",
+    "@angular/platform-browser-dynamic": "^7.1.4",
+    "@angular/router": "^7.1.4",
+    "core-js": "^2.6.5",
+    "ngx-ludan-modal": "*",
+    "ngx-ludan-sudoku": "^1.0.0",
+    "ngx-markdown": "^7.1.5",
     "node-sass": "^4.11.0",
-    "prismjs": "^1.15.0",
+    "prismjs": "^1.16.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "typed.js": "^2.0.9",
+    "typed.js": "^2.0.10",
     "underscore": "^1.9.1",
-    "zone.js": "~0.8.26"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular-devkit/build-angular": "^0.11.4",
     "@angular/cli": "^7.3.8",
-    "@angular/compiler-cli": "~7.1.0",
-    "@angular/fire": "^5.1.1",
-    "@angular/language-service": "~7.1.0",
-    "@babel/core": "^7.2.0",
-    "@storybook/addon-knobs": "^4.0.11",
-    "@storybook/addons": "^4.0.11",
-    "@storybook/angular": "^4.0.11",
-    "@types/jasmine": "~2.8.8",
+    "@angular/compiler-cli": "^7.1.4",
+    "@angular/fire": "^5.1.2",
+    "@angular/language-service": "^7.1.4",
+    "@babel/core": "^7.4.3",
+    "@storybook/addon-knobs": "^4.1.18",
+    "@storybook/addons": "^4.1.18",
+    "@storybook/angular": "^4.1.18",
+    "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "~2.0.3",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
     "codelyzer": "~4.5.0",
-    "firebase": "^5.6.0",
+    "firebase": "^5.9.4",
     "husky": "^1.3.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "npm-run-all": "^4.1.5",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.2",
     "sass-lint": "^1.12.1",
     "sass-lint-auto-fix": "^0.16.2",
-    "storybook-readme": "^4.0.2",
+    "storybook-readme": "^4.0.5",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6"
