--- a/package.json
+++ b/package.json
@@ -20,59 +20,59 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.4",
-    "@angular/cdk": "^7.3.7",
-    "@angular/common": "^7.1.4",
-    "@angular/compiler": "^7.1.4",
-    "@angular/core": "^7.1.4",
-    "@angular/flex-layout": "^7.0.0-beta.24",
-    "@angular/forms": "^7.1.4",
-    "@angular/platform-browser": "^7.1.4",
-    "@angular/platform-browser-dynamic": "^7.1.4",
-    "@angular/router": "^7.1.4",
-    "core-js": "^2.6.5",
+    "@angular/animations": "^8.1.1",
+    "@angular/cdk": "^8.0.2",
+    "@angular/common": "^8.1.1",
+    "@angular/compiler": "^8.1.1",
+    "@angular/core": "^8.1.1",
+    "@angular/fire": "^5.2.1",
+    "@angular/flex-layout": "^8.0.0-beta.26",
+    "@angular/forms": "^8.1.1",
+    "@angular/platform-browser": "^8.1.1",
+    "@angular/platform-browser-dynamic": "^8.1.1",
+    "@angular/router": "^8.1.1",
+    "@storybook/addon-knobs": "^5.1.9",
+    "@storybook/addons": "^5.1.9",
+    "@storybook/angular": "^5.1.9",
+    "core-js": "^3.1.4",
     "ngx-ludan-modal": "*",
     "ngx-ludan-sudoku": "^1.0.0",
-    "ngx-markdown": "^7.1.5",
-    "node-sass": "^4.11.0",
+    "ngx-markdown": "^8.1.0",
+    "node-sass": "^4.12.0",
     "prismjs": "^1.16.0",
-    "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
+    "rxjs": "~6.5.2",
+    "tslib": "^1.10.0",
     "typed.js": "^2.0.10",
     "underscore": "^1.9.1",
-    "zone.js": "^0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.11.4",
-    "@angular/cli": "^7.3.8",
-    "@angular/compiler-cli": "^7.1.4",
-    "@angular/fire": "^5.1.2",
-    "@angular/language-service": "^7.1.4",
-    "@babel/core": "^7.4.3",
-    "@storybook/addon-knobs": "^4.1.18",
-    "@storybook/addons": "^4.1.18",
-    "@storybook/angular": "^4.1.18",
-    "@types/jasmine": "^2.8.16",
+    "@angular-devkit/build-angular": "~0.801.1",
+    "@angular/cli": "^8.1.1",
+    "@angular/compiler-cli": "^8.1.1",
+    "@angular/language-service": "^8.1.1",
+    "@babel/core": "^7.5.4",
+    "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "~2.0.3",
-    "babel-loader": "^8.0.5",
-    "codelyzer": "~4.5.0",
-    "firebase": "^5.9.4",
-    "husky": "^1.3.1",
-    "jasmine-core": "~2.99.1",
+    "babel-loader": "^8.0.6",
+    "codelyzer": "^5.0.1",
+    "firebase": "^6.2.4",
+    "husky": "^3.0.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.1.4",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.5",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "npm-run-all": "^4.1.5",
     "protractor": "^5.4.2",
-    "sass-lint": "^1.12.1",
-    "sass-lint-auto-fix": "^0.16.2",
-    "storybook-readme": "^4.0.5",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "sass-lint": "^1.13.1",
+    "sass-lint-auto-fix": "^0.17.0",
+    "storybook-readme": "^5.0.5",
+    "ts-node": "~8.3.0",
+    "tslint": "~5.18.0",
+    "typescript": "^3.4.5"
   },
   "husky": {
     "hooks": {
