--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "core-js": "^3.1.4",
     "express": "^4.15.2",
     "ngx-ludan-modal": "*",
+    "ngx-ludan-sidebar": "1.1.0",
     "ngx-ludan-sudoku": "^1.0.0",
     "ngx-markdown": "^8.1.0",
     "node-sass": "^4.12.0",
