lazy load images

--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "@angular/router": "^8.1.1",
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
-    "@trademe/ng-defer-load": "^3.0.1",
     "core-js": "^3.1.4",
     "express": "^4.15.2",
+    "ng-lazyload-image": "^6.0.0",
     "ngx-ludan-modal": "*",
     "ngx-ludan-sidebar": "1.1.0",
     "ngx-ludan-sudoku": "^1.0.0",
