added retirement calculator

--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "core-js": "^3.1.4",
     "express": "^4.15.2",
+    "moment": "^2.24.0",
     "ng-lazyload-image": "^6.0.0",
     "ngx-ludan-modal": "*",
+    "ngx-ludan-retirement-calculator": "0.0.2",
     "ngx-ludan-sidebar": "1.1.0",
     "ngx-ludan-sudoku": "^1.0.0",
     "ngx-markdown": "^8.1.0",
