updade all the ngx-ludan dependency to angular 8

--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "express": "^4.15.2",
     "moment": "^2.24.0",
     "ng-lazyload-image": "^6.0.0",
-    "ngx-ludan-modal": "*",
+    "ngx-ludan-modal": "^1.1.0",
     "ngx-ludan-retirement-calculator": "0.0.2",
     "ngx-ludan-sidebar": "1.1.0",
-    "ngx-ludan-sudoku": "^1.0.0",
+    "ngx-ludan-sudoku": "^1.1.0",
     "ngx-markdown": "^8.1.0",
     "node-sass": "^4.12.0",
     "prismjs": "^1.16.0",
