--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "ngx-ludan-retirement-calculator": "^1.0.0",
     "ngx-ludan-sidebar": "1.1.0",
     "ngx-ludan-sudoku": "^1.1.0",
-    "ngx-ludan-tags": "0.0.1",
+    "ngx-ludan-tags": "^1.0.0",
     "ngx-markdown": "^8.1.0",
     "node-sass": "^4.12.0",
     "prismjs": "^1.17.1",
