update color scheme

--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
     "express": "^4.15.2",
     "moment": "^2.24.0",
     "ng-lazyload-image": "^6.0.0",
-    "ngx-ludan-accordion": "0.0.1",
-    "ngx-ludan-dropdown": "0.0.1",
-    "ngx-ludan-modal": "^1.1.0",
+    "ngx-ludan-accordion": "^0.0.1",
+    "ngx-ludan-dropdown": "^0.0.1",
+    "ngx-ludan-modal": "^1.2.0",
     "ngx-ludan-retirement-calculator": "^1.0.0",
-    "ngx-ludan-sidebar": "1.1.0",
-    "ngx-ludan-sudoku": "^1.1.0",
+    "ngx-ludan-sidebar": "^1.1.0",
+    "ngx-ludan-sudoku": "^1.2.0",
     "ngx-ludan-tags": "^1.0.0",
     "ngx-markdown": "^8.1.0",
     "node-sass": "^4.12.0",
