add carousel to libs

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "moment": "^2.24.0",
     "ng-lazyload-image": "^6.0.0",
     "ngx-ludan-accordion": "^0.0.1",
+    "ngx-ludan-carousel": "0.0.1",
     "ngx-ludan-dropdown": "^0.0.1",
     "ngx-ludan-modal": "^1.2.0",
     "ngx-ludan-retirement-calculator": "^1.0.0",
