--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "tslib": "^1.10.0",
     "typed.js": "^2.0.10",
     "underscore": "^1.9.1",
-    "zone.js": "~0.10.0"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.802.0",
@@ -73,6 +73,7 @@
     "@storybook/angular": "^5.1.10",
     "@types/jasmine": "^3.3.16",
     "@types/jasminewd2": "~2.0.3",
+    "autoprefixer": "^8.6.5",
     "babel-loader": "^8.0.6",
     "codelyzer": "^5.0.1",
     "jasmine-core": "~3.4.0",
@@ -83,12 +84,13 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "^5.4.2",
-    "storybook-readme": "^5.0.8",
+    "sass-lint": "^1.13.1",
+    "sass-lint-auto-fix": "^0.17.0",
+    "storybook-readme": "^5.0.5",
     "ts-loader": "^6.0.4",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "^3.5.3",
-    "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.3.6"
   }
 }
