--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "core-js": "^3.1.4",
+    "d3": "^5.12.0",
     "express": "^4.15.2",
     "moment": "^2.24.0",
     "ng-lazyload-image": "^6.0.0",
@@ -48,6 +49,7 @@
     "ngx-ludan-carousel": "0.0.1",
     "ngx-ludan-dropdown": "^0.0.1",
     "ngx-ludan-modal": "^1.2.0",
+    "ngx-ludan-pie-chart": "^1.2.0",
     "ngx-ludan-retirement-calculator": "^1.3.0",
     "ngx-ludan-sidebar": "^1.1.0",
     "ngx-ludan-sudoku": "^1.2.0",
