--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.0",
+    "@angular/animations": "^9.0.7",
     "@angular/cdk": "^8.1.2",
-    "@angular/common": "^8.2.0",
-    "@angular/compiler": "^8.2.0",
-    "@angular/core": "^8.2.0",
-    "@angular/forms": "^8.2.0",
-    "@angular/platform-browser": "^8.2.0",
-    "@angular/platform-browser-dynamic": "^8.2.0",
-    "@angular/platform-server": "^8.2.0",
-    "@angular/router": "^8.2.0",
+    "@angular/common": "^9.0.7",
+    "@angular/compiler": "^9.0.7",
+    "@angular/core": "^9.0.7",
+    "@angular/forms": "^9.0.7",
+    "@angular/platform-browser": "^9.0.7",
+    "@angular/platform-browser-dynamic": "^9.0.7",
+    "@angular/platform-server": "^9.0.7",
+    "@angular/router": "^9.0.7",
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "core-js": "^3.1.4",
@@ -56,17 +56,17 @@
     "ngx-markdown": "^8.1.0",
     "node-sass": "^4.12.0",
     "prismjs": "^1.17.1",
-    "rxjs": "~6.5.2",
+    "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "typed.js": "^2.0.10",
     "underscore": "^1.9.1",
-    "zone.js": "^0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.802.0",
-    "@angular/cli": "^8.2.0",
-    "@angular/compiler-cli": "^8.2.0",
-    "@angular/language-service": "^8.2.0",
+    "@angular-devkit/build-angular": "~0.900.7",
+    "@angular/cli": "^9.0.7",
+    "@angular/compiler-cli": "^9.0.7",
+    "@angular/language-service": "^9.0.7",
     "@babel/core": "^7.5.5",
     "@storybook/addon-actions": "^5.1.10",
     "@storybook/addon-links": "^5.1.10",
@@ -77,7 +77,7 @@
     "@types/jasminewd2": "~2.0.3",
     "autoprefixer": "^8.6.5",
     "babel-loader": "^8.0.6",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.2.0",
@@ -92,7 +92,7 @@
     "ts-loader": "^6.0.4",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "^3.5.3",
+    "typescript": "^3.7.5",
     "webpack-cli": "^3.3.6"
   }
 }
