--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/compiler": "^9.0.7",
     "@angular/core": "^9.0.7",
     "@angular/forms": "^9.0.7",
+    "@angular/material": "^9.1.3",
     "@angular/platform-browser": "^9.0.7",
     "@angular/platform-browser-dynamic": "^9.0.7",
     "@angular/platform-server": "^9.0.7",
@@ -45,6 +46,7 @@
     "ngx-disqus": "^2.4.3",
     "ngx-ludan-accordion": "^1.0.0",
     "ngx-ludan-carousel": "0.0.1",
+    "ngx-ludan-child-async-validation": "0.0.1",
     "ngx-ludan-dropdown": "^0.0.1",
     "ngx-ludan-modal": "^1.2.0",
     "ngx-ludan-pie-chart": "^1.3.0",
